--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
-
+    <script src='./src/assets/js/skirts.js' type='text/javascript'></script>
+    <link rel="stylesheet" href="./src/assets/style.css"/>
 </head>
 <body>
     <h1>toolbox</h1>
@@ -8,11 +9,15 @@
         <span>Eventually I'll have navigation here</span>
     </nav>
 
-    <section>
-        <h2>Skirt Formulas</h2>
-
+    <section id="component_skirts">
 
     </section>
+    <script>
+        skirts.ReactDOM.render(
+        	skirts.React.createElement(skirts.skirts, {}),
+            document.getElementById("component_skirts")
+        )
+    </script>
 
 
 
