--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
 <body>
     <h1>toolbox</h1>
     <nav>
+        <ul>
+            <li>Three Tier</li>
+            <li>Super Ruffle Maximizer</li>
+        </ul>
     </nav>
 
     <section id="component_skirts">
