--- a/index.html
+++ b/index.html
@@ -1,24 +1,16 @@
 <html>
 <head>
-    <script src='./src/assets/js/skirts.js' type='text/javascript'></script>
+    <script src='./src/assets/js/sewing.js' type='text/javascript'></script>
     <link rel="stylesheet" href="./src/assets/style.css"/>
 </head>
 <body>
-    <h1>toolbox</h1>
-    <nav>
-        <ul>
-            <li>Three Tier</li>
-            <li>Super Ruffle Maximizer</li>
-        </ul>
-    </nav>
-
-    <section id="component_skirts">
+    <section id="app">
 
     </section>
     <script>
-        skirts.ReactDOM.render(
-        	skirts.React.createElement(skirts.skirts, {}),
-            document.getElementById("component_skirts")
+        sewing.ReactDOM.render(
+        	sewing.React.createElement(sewing.sewing, {}),
+            document.getElementById("app")
         )
     </script>
 </body>
